; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_wm8775.c_wm8775_log_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_wm8775.c_wm8775_log_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }
%struct.wm8775_state = type { i32, i32 }

@.str = private unnamed_addr constant [11 x i8] c"Input: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*)* @wm8775_log_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm8775_log_status(%struct.v4l2_subdev* %0) #0 {
  %2 = alloca %struct.v4l2_subdev*, align 8
  %3 = alloca %struct.wm8775_state*, align 8
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %2, align 8
  %4 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %2, align 8
  %5 = call %struct.wm8775_state* @to_state(%struct.v4l2_subdev* %4)
  store %struct.wm8775_state* %5, %struct.wm8775_state** %3, align 8
  %6 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %2, align 8
  %7 = load %struct.wm8775_state*, %struct.wm8775_state** %3, align 8
  %8 = getelementptr inbounds %struct.wm8775_state, %struct.wm8775_state* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @v4l2_info(%struct.v4l2_subdev* %6, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i32 %9)
  %11 = load %struct.wm8775_state*, %struct.wm8775_state** %3, align 8
  %12 = getelementptr inbounds %struct.wm8775_state, %struct.wm8775_state* %11, i32 0, i32 0
  %13 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %2, align 8
  %14 = getelementptr inbounds %struct.v4l2_subdev, %struct.v4l2_subdev* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @v4l2_ctrl_handler_log_status(i32* %12, i32 %15)
  ret i32 0
}

declare dso_local %struct.wm8775_state* @to_state(%struct.v4l2_subdev*) #1

declare dso_local i32 @v4l2_info(%struct.v4l2_subdev*, i8*, i32) #1

declare dso_local i32 @v4l2_ctrl_handler_log_status(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
